# dealrs

./: Cargo.toml  LICENSE  README.md
benches/: multiset_encdec.rs  ranking.rs  refbest5.rs  sample_cards.rs  sampling.rs  spaces.rs
examples/: deal.rs  hand.rs  refbest5.rs  simpairs.rs
examples/sim/: pairs.rs
src/: lib.rs
src/betting/: mod.rs
src/combrs/: bagspace.rs  mod.rs
src/deck/: card.rs  cardmask.rs  mod.rs
src/hand/: mod.rs
src/hand/lutbest5/: lutbest5.json  lutbest5.md  mod.rs
src/hand/lutrank/: lutrank.json  lutrank.md  lutrank.rs  mod.rs
src/hand/refbest5/: mod.rs
src/hand/refhand5/: mod.rs
src/texas/: cli.rs  mod.rs
src/texas/agents/: fishy.rs  mod.rs  nitty.rs  shovy.rs  simplecli.rs
