[package]
name = "dealrs"
version = "0.1.0"
edition = "2024"

[features]
include_lutbest5 = []
default = ["include_lutbest5"]

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
criterion = "0.7.0"
indexmap = { version = "2.11.3", features = ["serde"] }
itertools = "0.14.0"
kdam = "0.6.3"
num = "0.4.3"
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_seeder = "0.4.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"

[[example]]
name = "gen-lutbest5"
path = "examples/gen/lutbest5.rs"

[[example]]
name = "sim-pairs"
path = "examples/sim/pairs.rs"

[[bench]]
name = "refbest5"
harness = false

[[bench]]
name = "sample_cards"
harness = false

[[bench]]
name = "multiset_encdec"
harness = false
