[package]
name = "dealrs"
version = "0.2.0"
edition = "2024"
description = "Toolkit for card games like poker, providing card, deck, hand, and exploration utilities."
license = "MIT"
authors = ["Cade Brown <brown.cade@gmail.com>"]
repository = "https://github.com/cadebrown/dealrs"


[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
indexmap = { version = "2.11.3", features = ["serde"] }
itertools = "0.14.0"
kdam = "0.6.3"
num = "0.4.3"
once_cell = "1.21.3"
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_seeder = "0.4.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"

[dev-dependencies]
criterion = "0.7.0"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[bin]]
name = "texas"
test = false
bench = false

[[bin]]
name = "lutrank"
path = "src/hand/lutrank/lutrank.rs"
test = false
bench = false


[[bench]]
name = "ranking"
harness = false

[[bench]]
name = "sampling"
harness = false

[[bench]]
name = "spaces"
harness = false
